--- a/frontend/src/app/user/users-list/users-list.component.css
+++ b/frontend/src/app/user/users-list/users-list.component.css
@@ -1,62 +1,14 @@
 .users-container {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  height: 90vh;
-  background-color: #2c2c2c;
+  padding: 10px;
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-
-.pagination {
+mat-form-field {
   margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-button {
-  background: none;
+a {
+  color: black;
+  margin-left: 15px;
   border: none;
-  padding: 5px;
-  cursor: pointer;
-  outline: none;
-  color: white;
-}
-
-span{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-select{
-  background: none;
-  border: none;
-  color: white;
-  transform: scale(1.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.active {
-  color: green;
-}
-
-.inactive {
-  color: orange;
-}
-
-.status-container {
-  display: flex;
-}
-
-input[type="checkbox"] {
-  transform: scale(1.5);
-  margin-right: 10px;
+  text-decoration: none;
 }
