--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -2,13 +2,13 @@
   <div class="app-title">
     <img src="{{ logoSrc }}" class="app-logo" alt="logo" />
     <a
-      [routerLink]="userLogin?.token ? '/home' : null"
-      [ngClass]="{ 'disabled-link': !userLogin?.token }"
+      [routerLink]="isAuthenticated ? '/home' : null"
+      [ngClass]="{ 'disabled-link': !isAuthenticated }"
     >
       {{ pageTitle }}
     </a>
   </div>
-  <div *ngIf="userLogin?.token">
+  <div *ngIf="isAuthenticated">
     <a routerLink="/calendar">Calendar</a>
     <a routerLink="/bills">Bills</a>
     <a routerLink="/projects">Projects</a>
