--- a/frontend/src/app/shared/components/project/project-card/project-card.component.html
+++ b/frontend/src/app/shared/components/project/project-card/project-card.component.html
@@ -1,14 +1,47 @@
 <div class="content">
-  <mat-card class="mat-elevation-z4">
-    <mat-card-header>
-      <mat-card-title>Himalayan Peaks</mat-card-title>
+  <mat-card
+    class="project-info border px-3 py-3 d-flex flex-column justify-content-between rounded"
+    [ngStyle]="backgroundStyle"
+  >
+    <mat-card-header class="d-flex justify-content-between align-items-center">
+      <div class="logo-container" [ngStyle]="buttonStyle">
+        <h3 class="m-0 logo">
+          {{ project?.title?.slice(0, 1) }}
+        </h3>
+      </div>
+      <mat-card-title class="ms-3 my-0">{{ project?.title }}</mat-card-title>
+
+      <mat-card-actions>
+        <button
+          type="button"
+          class="btn link-button"
+          [ngStyle]="buttonStyle"
+          (click)="redirectToProjectInfo()"
+        >
+          <mat-icon
+            class="arrow-icon"
+            aria-hidden="false"
+            aria-label="Arrow icon"
+            >east</mat-icon
+          >
+        </button>
+      </mat-card-actions>
     </mat-card-header>
+
     <mat-card-content>
-      <p>The Himalayas is a mountain range in Asia.</p>
+      <section class="ms-2">
+        <h2 class="hours my-1">{{ project?.hours }}h</h2>
+      </section>
+      <section class="ms-2">
+        <h6 class="hours-subtitle">
+          <span> Current Month: </span>
+          <span style="font-weight: 600">{{ project?.hours }}h</span>
+        </h6>
+        <h6 class="hours-subtitle">
+          <span> Last Month: </span>
+          <span style="font-weight: 600">{{ project?.createdDate }}h</span>
+        </h6>
+      </section>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
   </mat-card>
 </div>
