--- a/frontend/src/app/shared/components/project/project.component.css
+++ b/frontend/src/app/shared/components/project/project.component.css
@@ -1,10 +1,11 @@
-.col-4 {
-  color: aliceblue;
-  background-color: #121212;
+.container {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.overflow-auto {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 90vh;
-  flex-direction: column;
-  font-family: "Times New Roman", Times, serif;
+  flex-wrap: wrap;
+  justify-content: flex-start;
 }
