--- a/frontend/src/app/shared/components/project/project.component.html
+++ b/frontend/src/app/shared/components/project/project.component.html
@@ -1,13 +1,22 @@
-<mat-toolbar> Project </mat-toolbar>
-<div class="content">
-  <div fxLayout="row wrap" fxLayoutGap="16px grid">
-    <div
-      fxFlex="25%"
-      fxFlex.xs="100%"
-      fxFlex.sm="33%"
-      *ngFor="let num of [1, 2, 3, 4, 5, 6, 7]"
-    >
-      <app-project-card *ngFor="let project of projects"> </app-project-card>
+<div class="container">
+  <mat-toolbar> Project </mat-toolbar>
+  <div class="content">
+    <div class="overflow-auto gap w-100 pb-1">
+      <div
+        *ngFor="let project of projects; index as i"
+        class="project-card-container"
+      >
+        <app-project-card
+          *ngIf="project"
+          [project]="project"
+          [backgroundStyle]="getBackgroundColor(i)"
+          [buttonStyle]="getButtonColor(i)"
+        >
+        </app-project-card>
+      </div>
+      <div class="w-100" *ngIf="!projects.length">
+        <h6 message="You don't have any active projects"></h6>
+      </div>
     </div>
   </div>
 </div>
