--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,15 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-
-html,
-body,
-input {
-  background-color: #2c2c2c;
-  height: 100%;
-  color: rgb(163, 163, 163);
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
 .success-snackbar {
   background-color: #43a047 !important; /* green */
 }
@@ -19,10 +7,15 @@ input {
 }
 
 html,
-body {
+body,
+input,
+.container,
+.content {
   height: 100%;
-}
-body {
+  width: 100%;
   margin: 0;
+  padding: 0;
+  background-color: #2c2c2c;
+  color: rgb(163, 163, 163);
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
