--- a/frontend/src/app/shared/components/project/project.component.html
+++ b/frontend/src/app/shared/components/project/project.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div>
   <mat-toolbar> Project </mat-toolbar>
   <div class="content">
-    <div class="overflow-auto gap w-100 pb-1">
+    <div class="overflow-auto gap">
       <div
         *ngFor="let project of projects; index as i"
         class="project-card-container"
