--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,13 +3,8 @@
     [pageTitle]="'Work Scheduler'"
     [logoSrc]="'assets/images/logo.png'"
   />
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col">
-        <!-- <app-nav *ngIf="isAuthenticated"></app-nav> -->
-        <router-outlet></router-outlet>
-      </div>
-    </div>
+  <div>
+    <router-outlet></router-outlet>
   </div>
 </div>
 x
