--- a/frontend/src/app/shared/components/auth/auth.component.css
+++ b/frontend/src/app/shared/components/auth/auth.component.css
@@ -2,6 +2,10 @@ div {
   color: #8f4545;
 }
 
+.content {
+  width: 100%;
+}
+
 .col-4 {
   background-color: #121212;
   display: flex;
@@ -10,6 +14,10 @@ div {
   height: 90vh;
   flex-direction: column;
   font-family: "Times New Roman", Times, serif;
+}
+
+.tab-content {
+  width: 40%;
 }
 
 input {
