--- a/frontend/src/app/shared/components/project/project.component.css
+++ b/frontend/src/app/shared/components/project/project.component.css
@@ -1,7 +1,6 @@
-.container {
-  width: 100%;
-  margin: 0;
-  padding: 0;
+.mat-toolbar {
+  background-color: #2c2c2c;
+  color: white;
 }
 
 .overflow-auto {
