--- a/frontend/src/app/shared/components/user/user.component.css
+++ b/frontend/src/app/shared/components/user/user.component.css
@@ -1,6 +1,6 @@
 .user-profile {
   padding: 20px;
-  height: 90vh;
+  height: 100%;
   background-color: #2c2c2c;
   position: relative;
 }
@@ -31,12 +31,12 @@ form {
   font-weight: bold;
 }
 
-input{
+input {
   width: 100%;
 }
 
 select {
-  color: rgb(163, 163, 163);;
+  color: rgb(163, 163, 163);
   background-color: #2c2c2c;
   width: 100px;
 }
