feat: implement delete user

--- a/frontend/src/app/shared/components/user/users-list/users-list.component.css
+++ b/frontend/src/app/shared/components/user/users-list/users-list.component.css
@@ -14,3 +14,10 @@ a {
   text-decoration: none;
   background-color: white;
 }
+
+.delete-column {
+  flex: 0 0 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
