feat: add changes

--- a/frontend/src/app/shared/components/project/project-card/project-card.component.html
+++ b/frontend/src/app/shared/components/project/project-card/project-card.component.html
@@ -37,15 +37,11 @@
       <section class="ms-2">
         <h6 class="hours-subtitle">
           <span> Current Month: </span>
-          <span style="font-weight: 600">{{
-            project?.hours ? project?.hours + "h" : "-"
-          }}</span>
+          <span>{{ project?.hours ? project?.hours + "h" : "-" }}</span>
         </h6>
         <h6 class="hours-subtitle">
           <span> Last Month: </span>
-          <span style="font-weight: 600">{{
-            formatDate(project?.createdDate)
-          }}</span>
+          <span>{{ formatDate(project?.createdDate) }}</span>
         </h6>
       </section>
     </mat-card-content>
