--- a/frontend/src/app/shared/components/project/project-info/project-info.component.html
+++ b/frontend/src/app/shared/components/project/project-info/project-info.component.html
@@ -1,3 +1,7 @@
-<div>
-    <mat-toolbar> Project </mat-toolbar>
+<div class="user-profile">
+  <ng-container>
+    <button (click)="backToList()" class="cancel-btn" matTooltip="Cancel">
+      <mat-icon>keyboard_arrow_left</mat-icon>
+    </button>
+  </ng-container>
 </div>
