--- a/frontend/src/app/shared/components/user/user-create/user-create.component.css
+++ b/frontend/src/app/shared/components/user/user-create/user-create.component.css
@@ -1,22 +1,21 @@
 form {
   width: 100%;
   display: flex;
-  justify-content: center; /* Wyśrodkowanie poziome */
-  align-items: center; /* Wyśrodkowanie pionowe */
-  flex-direction: column; /* Ustawia elementy jeden pod drugim */
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 container {
-  width: 100%; /* Ensuring the container takes up the full width of its parent */
+  width: 100%;
 }
 
 mat-dialog-actions {
   display: flex;
-  justify-content: space-between; /* Pushes elements to the edges of the container */
-  align-items: center; /* Vertically aligns items */
+  justify-content: space-between;
+  align-items: center;
 }
 
-/* Make the inputs span the width of the modal */
 mat-form-field {
   width: 100%;
 }
