--- a/frontend/src/app/shared/components/project/project.component.html
+++ b/frontend/src/app/shared/components/project/project.component.html
@@ -1,9 +1,28 @@
 <div>
   <mat-toolbar>
-    Project
+    <mat-form-field
+      *forRoles="[role.ADMIN]"
+      class="flex-fill"
+      appearance="fill"
+      [hideRequiredMarker]="true"
+    >
+      <mat-label>Status</mat-label>
+      <mat-select
+        [(value)]="selectedStatus"
+        (selectionChange)="fetchProjects()"
+      >
+        <mat-option
+          *ngFor="let status of filterProjectStatus"
+          [value]="status.value"
+        >
+          {{ status.viewValue }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
     <span class="spacer">
       <button
         *forRoles="[role.ADMIN]"
+        class="create-btn"
         mat-icon-button
         (click)="openAddUserModal()"
         matTooltip="Add"
