--- a/frontend/src/app/shared/components/project/project-info/project-info.component.css
+++ b/frontend/src/app/shared/components/project/project-info/project-info.component.css
@@ -2,7 +2,15 @@
   padding: 20px;
   height: 100%;
   background-color: #2c2c2c;
+  color: white;
   position: relative;
+}
+
+mat-form-field,
+mat-select,
+mat-option {
+  background-color: #2c2c2c;
+  color: white;
 }
 
 button {
@@ -13,10 +21,62 @@ button {
   cursor: pointer;
   outline: none;
 }
-.edit-btn {
+
+.edit-btn,
+.cancel-btn {
   right: 60px;
 }
 
-.delete-btn {
+.delete-btn,
+.save-btn {
   right: 20px;
+}
+
+form {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 10px;
+  margin-top: 50px;
+}
+
+.project-field {
+  background-color: "#f7f7f7";
+  border: 1px solid rgb(163, 163, 163);
+  border-radius: 5px;
+  flex: 1 1 calc(33% - 15px); /* 3 fields per row with a small margin */
+  margin: 10px;
+  padding: 10px;
+  position: relative;
+  height: 8%;
+}
+
+.project-field label {
+  position: absolute;
+  top: -20px;
+  left: 15px;
+  font-weight: bold;
+}
+
+input {
+  width: 100%;
+}
+
+select {
+  color: rgb(163, 163, 163);
+  background-color: #2c2c2c;
+  width: 100px;
+}
+
+/* Responsive styles for smaller screens */
+@media (max-width: 800px) {
+  .project-field {
+    flex: 1 1 calc(50% - 15px); /* 2 fields per row */
+  }
+}
+
+@media (max-width: 500px) {
+  .project-field {
+    flex: 1 1 100%; /* 1 field per row */
+  }
 }
