--- a/frontend/src/app/shared/components/project/project-info/project-info.component.css
+++ b/frontend/src/app/shared/components/project/project-info/project-info.component.css
@@ -1,16 +1,12 @@
-.project-profilee {
+.project-profile {
   padding: 20px;
   height: 100%;
-  background-color: #2c2c2c;
-  color: white;
   position: relative;
+  background-color: white;
 }
 
-mat-form-field,
-mat-select,
-mat-option {
-  background-color: #2c2c2c;
-  color: white;
+input {
+  background-color: white;
 }
 
 button {
@@ -40,8 +36,8 @@ form {
   margin-top: 50px;
 }
 
-.project-field {
-  background-color: "#f7f7f7";
+.project-field,
+mat-form-field {
   border: 1px solid rgb(163, 163, 163);
   border-radius: 5px;
   flex: 1 1 calc(33% - 15px); /* 3 fields per row with a small margin */
@@ -51,7 +47,12 @@ form {
   height: 8%;
 }
 
-.project-field label {
+mat-select {
+  border: none;
+}
+
+.project-field label,
+mat-label {
   position: absolute;
   top: -20px;
   left: 15px;
@@ -63,8 +64,6 @@ input {
 }
 
 select {
-  color: rgb(163, 163, 163);
-  background-color: #2c2c2c;
   width: 100px;
 }
 
