--- a/frontend/src/app/shared/components/project/project-card/project-card.component.css
+++ b/frontend/src/app/shared/components/project/project-card/project-card.component.css
@@ -1,7 +1,3 @@
-mat-toolbar {
-  justify-content: space-between;
-}
-
 .project-info {
   width: 320px;
   height: 215px;
@@ -51,4 +47,22 @@ span {
 
 .arrow-icon {
   color: white;
+}
+
+mat-card-header,
+mat-card-content {
+  display: block;
+  max-width: calc(100%);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  flex-grow: 1;
+  flex-shrink: 0;
+  white-space: nowrap;
+}
+
+mat-card-title {
+  max-width: 80px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
