--- a/frontend/src/app/shared/components/project/project-card/project-card.component.html
+++ b/frontend/src/app/shared/components/project/project-card/project-card.component.html
@@ -3,7 +3,10 @@
     class="project-info border px-3 py-3 d-flex flex-column justify-content-between rounded"
     [ngStyle]="backgroundStyle"
   >
-    <mat-card-header class="d-flex justify-content-between align-items-center">
+    <mat-card-header
+      class="d-flex justify-content-between align-items-center"
+      style="max-width: calc(100%)"
+    >
       <div class="logo-container" [ngStyle]="buttonStyle">
         <h3 class="m-0 logo">
           {{ project?.title?.slice(0, 1) }}
