--- a/frontend/src/app/shared/components/calendar/calendar.component.css
+++ b/frontend/src/app/shared/components/calendar/calendar.component.css
@@ -14,13 +14,13 @@ li {
 }
 
 b {
-  /* used for event dates/times */
   margin-right: 3px;
 }
 
 .demo-app {
   display: flex;
   min-height: 100%;
+  width: 100%;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 14px;
 }
@@ -42,7 +42,6 @@ b {
 }
 
 .fc {
-  /* the calendar root */
   max-width: 1100px;
   margin: 0 auto;
 }
