fix: view of modal to create event

--- a/frontend/src/app/shared/components/calendar/event/event.component.css
+++ b/frontend/src/app/shared/components/calendar/event/event.component.css
@@ -1,23 +1,8 @@
-.modal-overlay {
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: 0;
-  width: 500px;
-  height: 500px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #1a1a1a;
+mat-form-field {
+  width: 100%;
 }
 
-.modal-content {
-  padding: 20px;
-  border-radius: 5px;
-  width: 50%;
-}
-
-.modal-header {
+mat-dialog-actions {
   display: flex;
   justify-content: space-between;
   align-items: center;
