--- a/frontend/src/app/shared/components/calendar/event/event.component.html
+++ b/frontend/src/app/shared/components/calendar/event/event.component.html
@@ -1,12 +1,14 @@
 <div class="container">
   <mat-dialog-actions>
-    <h2 mat-dialog-title>Task Manager</h2>
+    <h2 mat-dialog-title>
+      {{ existingEventId ? "Edit Task" : "Create Task" }}
+    </h2>
     <button mat-icon-button mat-dialog-close matTooltip="Cancel">
       <mat-icon>clear</mat-icon>
     </button>
   </mat-dialog-actions>
   <mat-dialog-content class="mat-typography">
-    <form class="">
+    <form>
       <mat-form-field appearance="fill">
         <mat-label>Task description</mat-label>
         <textarea
@@ -18,15 +20,25 @@
       <mat-form-field appearance="fill">
         <mat-label>Project</mat-label>
         <mat-select [(ngModel)]="selectedProject" name="project">
-          <mat-option *ngFor="let project of projects" [value]="project"
-            >{{ project.title }}
+          <mat-option *ngFor="let project of projects" [value]="project">
+            {{ project.title }}
           </mat-option>
         </mat-select>
       </mat-form-field>
     </form>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
+    <button
+      mat-button
+      *ngIf="existingEventId"
+      color="warn"
+      (click)="onDelete()"
+    >
+      Delete
+    </button>
     <button mat-button (click)="onCancel()">Cancel</button>
-    <button mat-button color="primary" (click)="onSubmit()">Submit</button>
+    <button mat-button color="primary" (click)="onSubmit()">
+      {{ existingEventId ? "Update" : "Create" }}
+    </button>
   </mat-dialog-actions>
 </div>
