fix: edit title

--- a/frontend/src/app/shared/components/calendar/event/event.component.html
+++ b/frontend/src/app/shared/components/calendar/event/event.component.html
@@ -11,11 +11,7 @@
     <form>
       <mat-form-field appearance="fill">
         <mat-label>Task description</mat-label>
-        <textarea
-          matInput
-          [(ngModel)]="taskDescription"
-          name="taskDescription"
-        ></textarea>
+        <textarea matInput [(ngModel)]="title" name="title"></textarea>
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-label>Project</mat-label>
