--- a/frontend/src/app/shared/components/calendar/calendar.component.html
+++ b/frontend/src/app/shared/components/calendar/calendar.component.html
@@ -28,6 +28,15 @@
         toggle weekends
       </label>
     </div> -->
+    <div *forRoles="[role.ADMIN] || [role.MANAGER]" class="users-container">
+      <div *ngFor="let user of users">
+        <h3>{{ user.firstName }}'s Calendar</h3>
+        <full-calendar
+          [options]="generateCalendarOptionsForUser(user)"
+        ></full-calendar>
+      </div>
+    </div>
+
     <div class="demo-app-sidebar-section">
       <h2>All Events ({{ currentEvents.length }})</h2>
       <ul>
