fix: add creted project to project list

--- a/frontend/src/app/shared/components/project/project.component.html
+++ b/frontend/src/app/shared/components/project/project.component.html
@@ -43,7 +43,7 @@
         *forRoles="[role.ADMIN]"
         class="create-btn"
         mat-icon-button
-        (click)="openAddUserModal()"
+        (click)="openCreateProjectModal()"
         matTooltip="Add"
       >
         <mat-icon>add</mat-icon>
